improving the portfolio

--- a/mikeWork.html
+++ b/mikeWork.html
@@ -11,14 +11,22 @@
 <style>
 
 
+   body{
+   	  background: rgb(0,0,0,0.8);
+   }
+
    #headerDiv{
 
    	  position: absolute;
-   	  top: 5%;
-   	  left: 40%;
-   	  height: 20%;
-   	  width: 20%;
-   	  background: red;
+   	  top: 7.25%;
+   	  left: 45%;
+   	  height: 10%;
+   	  width: 10%;
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+	  color: rgba(115, 209, 201, 0.8);
+	  font-size: 2vw;
 
    }
 
@@ -26,7 +34,7 @@
    #projectsDiv{
 
    	position: absolute;
-   	top: 28.5%;
+   	top: 27.5%;
    	height: 70%;
    	width: 80%;
    	left:10%;
@@ -41,7 +49,6 @@
 
    	  height: 48%;
    	  width: 100%;
-   	  background: red;
    	  display: flex;
    	  flex-direction: row;
    	  justify-content: space-around;
@@ -54,7 +61,18 @@
 
    	height: 100%;
    	width: 24.5%;
-   	background: grey;
+   	background: rgba(255, 255, 255, 0.603);
+	display: flex;
+	flex-direction: column;
+	border-radius: 5px;
+
+
+   }
+
+   .projectSquareA{
+	   display: flex;
+	   justify-content: center;
+	   align-items: center;
    }
 
  
@@ -65,7 +83,6 @@
    #headerDiv{
 
    	  position: absolute;
-
    	  top: 5%;
    	  left: 25%;
    	  height: 12.5%;
@@ -114,13 +131,71 @@
 }
 
 
+
+.projectSquareA{
+
+
+	height: 80%;
+	width: 100%;
+
+
+}
+
+
+.projectSquareB{
+	height: 20%;
+	width: 100%;
+	background: orange;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+}
+
+
+.projectSquareBA{
+
+	height: 45%;
+	width: 80%;
+	font-size: 2vw;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+
+
+
+}
+
+
+
+.projectSquareBB{
+
+
+	height: 40%;
+	width: 80%;
+	font-size: 1vw;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+
+	
+
+}
+
+.portfolioImg{
+
+	height: 50%;
+	width: auto;
+}
+
+
 </style>
 
 
 
 <div id='headerDiv'>
 
-	
+	<img style="height: 90%" src='img/laptop.png' class='portfolioImg'>
 
 </div>
 
@@ -128,16 +203,92 @@
 
 
 	<div class="projectsDivRow">
-	   <div class="projectSquare"></div>
-	   <div class="projectSquare"></div>	
-	   <div class="projectSquare"></div>
-	   <div class="projectSquare"></div>
+	   <div class="projectSquare">
+	    	<div class="projectSquareA">
+				<img style='height: 60%;' src='img/monop.png' class='portfolioImg'>
+			</div>
+			<div class="projectSquareB">
+				<div class="projectSquareBA">Monopoly AIs</div>
+				<div class="projectSquareBB">Javascript, hashing, search trees</div>
+			</div>
+	   </div>
+	   <div class="projectSquare">
+		<div class="projectSquareA">
+			<img src='img/eva.png' class='portfolioImg'>
+
+		</div>
+		<div class="projectSquareB">
+			<div class="projectSquareBA">EVA (Chess AI)</div>
+			<div class="projectSquareBB">Javascript, hashing, search trees</div>
+		</div>
+     </div>	   
+   
+	 <div class="projectSquare">
+		<div class="projectSquareA">
+			<img src='img/smart.png' class='portfolioImg'>
+
+		</div>
+		<div class="projectSquareB">
+			<div class="projectSquareBA">Smart(blockchain)</div>
+			<div class="projectSquareBB">PHP, JS</div>
+		</div>
+     </div>	 
+
+	 <div class="projectSquare">
+		<div class="projectSquareA">
+			<img src='img/field.png' class='portfolioImg'>
+
+		</div>
+		<div class="projectSquareB">
+			<div class="projectSquareBA">Betnet(Bet AI)</div>
+			<div class="projectSquareBB">PHP, JS</div>
+		</div>
+     </div>	 
 	</div>
     <div class="projectsDivRow">
-	   <div class="projectSquare"></div>
-	   <div class="projectSquare"></div>	
-	   <div class="projectSquare"></div>
-	   <div class="projectSquare"></div>
+		<div class="projectSquare">
+			<div class="projectSquareA">
+				<img style='height:45%; opacity: 0.8;' src='img/belleimage.png' class='portfolioImg'>
+
+			</div>
+			<div class="projectSquareB">
+				<div class="projectSquareBA">Belleimage</div>
+				<div class="projectSquareBB">Symfony, PHP, JS</div>
+			</div>
+		 </div>	 
+	
+		 <div class="projectSquare">
+			<div class="projectSquareA">
+				<img src='img/stats.png' class='portfolioImg'>
+
+			</div>
+			<div class="projectSquareB">
+				<div class="projectSquareBA">SmartLab</div>
+				<div class="projectSquareBB">Symfony, PHP, JS</div>
+			</div>
+		 </div>	 
+	
+		 <div class="projectSquare">
+			<div class="projectSquareA">
+				<img style='opacity: 0.8;' src='img/pandemic.png' class='portfolioImg'>
+			</div>
+			<div class="projectSquareB">
+				<div class="projectSquareBA">Pandemic(browser)</div>
+				<div class="projectSquareBB">JS</div>
+			</div>
+		 </div>	 
+	
+		 <div class="projectSquare">
+			<div class="projectSquareA">
+				<img src='img/hero.png' class='portfolioImg'>
+
+			</div>
+			<div class="projectSquareB">
+				<div class="projectSquareBA">hero(browser)</div>
+				<div class="projectSquareBB">JS</div>
+			</div>
+		 </div>	 
+	
 	</div>
 </div>
 
