--- a/mikeProfile.html
+++ b/mikeProfile.html
@@ -2,94 +2,34 @@
 <html>
 <head>
 	<title></title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
 	<style type="text/css">
 
+	
+     body{
 
-	  #headerDiv{
-	  	position: absolute;
-	  	top:5%;
-	  	height: 12.5%;
-	  	width: 80%;
-	  	left:10%;
-	  	background: rgb(255,155,14);
-	  	display:flex;
-	  	flex-direction: row;
-	  	align-items: center;
-	  	justify-content: space-around;
-	  }
-
-	  #headerDivA{
-
-	  	height: 100%;
-	  	width: 35%;
-	  	background: brown;
-	  	display: flex;
-	  	flex-direction: column;
-	  	justify-content: space-around;
-	  	align-items: center;
-	  	color: white;
-
-	  }
-
-	  #headerDivAA{
-
-	  	height: 55%;
-	  	width: 80%;
-	  	display: flex;
-	  	justify-content: center;
-	  	align-items: center;
-	  	font-size: 2vw;
-
-	  }
-
-	  #headerDivAB{
-	  	height: 25%;
-	  	width: 80%;
-	  	display: flex;
-	  	justify-content: center;
-	  	align-items: center;
-	  	font-size: 1.25vw;
-	  }
+     	background: rgb(0,0,0,0.8);
+	    color: rgb(255,255,255,0.9);
+		font-family: 'Domine', serif;		  
+		
+		
+		}
 
 
-	  #headerDivB{
-	  	height: 100%;
-	  	width: 65%;
-	  	display: flex;
-	  	flex-direction: row;
-	  	justify-content: space-around;
-	  	align-items: center;
-	  }
-
-	  .headerDivBA{
-	  	height: 90%;
-	  	width: 47.5%;
-	  	display: flex;
-	  	flex-direction: column;
-	  	justify-content: space-around;
-	  	align-items: center;
-	  }
-
-	 .headerDivBAA{
-
-	 	height: 45%;
-	 	width: 90%;
-	 	display: flex;
-	 	justify-content: flex-start;
-	 	align-items: center;
-	 }
 
 	  #aboutMeDiv{  	
 
 	  	position: absolute;
-	  	top:20%;
-	  	height: 20%;
+	  	top:22.5%;
+	  	height: 15%;
 	  	width: 80%;
 	  	left:10%;
-	  	background: blue;
 	  	display: flex;
 	  	flex-direction: column;
 
@@ -100,19 +40,20 @@
 
 	  	height: 25%;
 	  	width: 100%;
-	  	background: purple;
 	  	display: flex;
 	  	flex-direction: row;
 	  	justify-content: flex-start;
 	  	align-items: center;
 	  	font-size: 3vw;
+		color: grey;
+
 
 	  }
 
 	  #aboutMeDivBottom{
-	  	height: 75%;
+	  	height: 50%;
 	  	width: 100%;
-	  	background: grey;
+		margin-top: 1%;
 	  	display: flex;
 	  	justify-content: flex-start;
 	  	align-items: flex-start;
@@ -124,32 +65,29 @@
 	  #experiencesDiv{
 
 	  	position: absolute;
-	  	top:42.5%;
+	  	top:34.5%;
 	  	height: 35%;
 	  	width: 80%;
 	  	left:10%;
-	  	background: blue;
 	  	display: flex;
 	  	flex-direction: column;
-
-
-
 	  }
 
 	  #experiencesDivA{
 	  	height: 20%;
 	  	width: 100%;
-	  	background: pink;
 	  	display: flex;
 	  	justify-content: flex-start;
 	  	align-items: center;
 	  	font-size: 3vw;
+		 color: grey;
+
+
 	  }
 
 	  #experiencesDivB{
 	  	height: 80%;
 	  	width: 100%;
-	  	background: grey;
 	  	display: flex;
 	  	flex-direction: column;
 	  	justify-content: space-around;
@@ -169,18 +107,16 @@
 	 #preferencesDiv{
 
 	  	position: absolute;
-	  	top:80%;
+	  	top:82.5%;
 	  	height: 15%;
 	  	width: 80%;
 	  	left:10%;
-	  	background: brown;
 	  }
 
 
 	  .projectDiv{
 	  	height: 100%;
 	  	width: 24%;
-	  	background: yellow;
 	  	display: flex;
 	  	flex-direction: column;
 	  	justify-content: space-around;
@@ -208,29 +144,147 @@
 
 	  }	
 
+
+
+
+
+
+
+	  #nameDiv{
+
+		  position: absolute;
+		  top: 5%;
+		  left:40%;
+		  width: 20%;
+		  height: 10%;
+		  background: rgb(255,255,255,0.05);
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: space-between;
+		  align-items: center;
+
+	  }
+
+	  #nameDivA{
+
+		  height: 50%;
+		  width: 100%;
+		  font-size: 2.5vw;
+		  display: flex;
+		  justify-content: center;
+		  align-items: center;
+
+	  }
+
+
+	  #nameDivB{
+
+	     height: 30%;
+		 width: 100%;
+		 display: flex;
+		 justify-content: center;
+		 align-items: center;
+
+	  }
+
+
+
+	  #bottomDiv{
+		  position: absolute;
+		  top: 70%;
+		  left:10%;
+		  height: 25%;
+		  width: 80%;
+		  display: flex;
+		  flex-direction: row;
+		  align-items: center;
+		  justify-content: space-between;
+	  }
+
+	  #bottomDivA{
+
+		  height: 100%;
+		  width: 45%;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: space-between;
+		  align-items: center;
+	  }
+
+
+	  #bottomDivAA{
+		  height: 45%;
+		  width: 100%;
+		  display: flex;
+		  flex-direction: column;
+	  }
+
+	  #bottomDivAAA{
+
+		height: 50%;
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		align-items: flex-start;
+		font-size: 2.5vw;
+		color:grey;
+
+	  }
+
+	   #bottomDivAAB{
+
+		height: 50%;
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		font-size: 1vw;
+
+	  }
+
+
+
+
+	  #bottomDivB{
+
+		  height: 70%;
+		  width: 35%;
+		  background: rgb(255,255,255,0.05);
+		  display: flex;
+		  flex-direction: column;
+		  align-items: flex-start;
+		  justify-content: space-around;
+
+	  }
+
+
+	  #bottomDivBA{
+
+		  margin-left:5%;
+
+
+
+	  }
+
+
+	  
+
+
+
+
+
 	
 
 	</style>
 
 
- <div id='headerDiv'>
- 	<div id='headerDivA'>
- 		<div id='headerDivAA'>Michael Manga</div>
- 		<div id='headerDivAB'>web developer</div>
- 	</div>
- 	<div id='headerDivB'>
- 		<div class='headerDivBA'>
- 			<div class='headerDivBAA'>Adress: 7 Newton St. Stains, 93000 France</div>
- 			<div class='headerDivBAA'>Phone: 0622859405</div>
 
- 		</div>
- 		<div class='headerDivBA'>
- 			<div class='headerDivBAA'>Mail: Michael.mangajocky@gmail.com</div>
- 			<div class='headerDivBAA'>Website: www.m-mga.com</div>
 
- 		</div>
- 	</div>
- </div>
+<div id='nameDiv'>
+	<div id='nameDivA'>Michael Manga</div>
+	<div id='nameDivB'>web developer</div>
+</div>
+
 
 <div id='aboutMeDiv'>
 	<div id='aboutMeDivHeader'>About Me</div>
@@ -293,10 +347,28 @@
  	</div>
  </div>
 
- <div id='educationDiv'></div>
 
- <div id='preferencesDiv'></div>
+  
+  <div id='bottomDiv'>
+	 <div id='bottomDivA'>
 
+		<div id='bottomDivAA'>
+			<div id='bottomDivAAA'>Stack</div>
+			<div id='bottomDivAAB'>PHP, Symfony , Javascript , Ajax , CSS</div>
+		</div>
+
+	 </div>
+	 <div id='bottomDivB'>
+		<div id='bottomDivBA'>Mail: michael.mangajocky@gmail.com</div>
+		<div id='bottomDivBA'>Phone number : 06 22 85 94 05</div>
+		<div id='bottomDivBA'>Adress: 7, Newton St. , Stains, 93000 (France)</div>
+		<div id='bottomDivBA'>Github: www.github.com/michaelMga</div>
+
+
+	 </div>
+  </div>
+
+ 
 
 </body>
 </html>
